[package]
name = "massprint"
version = "0.1.0"
authors = ["Junn <likesgophers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
bench = false
path = "src/bin/main.rs"
name = "massprint"

[profile.release]
opt-level = 3
debug = false

[dependencies]
tokio = { version = "0.2.22", features = ["fs","sync", "rt-threaded", "macros"]}
reqwest = {version = "0.10.8", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.13"
regex = "1.3.9"
futures = "0.3.5"
lazy_static = "1.4.0"
slack-hook2 = "0.10.0"
clap = "2.33.1"
colored = "2.0.0"
chrono = "0.4"
tracing = {version = "0.1.19", features = ["attributes"]}
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.12"

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
